scripts/nullness/wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8.txt
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:11: error: (iterating.over.nullable) $$ 1 $$ variableList $$ ( 238, 250 ) $$ iterating over possibly-null reference variableList
		for (VariableInformation var : variableList)
		                               ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:58: error: (dereference.of.nullable) $$ 1 $$ parseRoot $$ ( 1713, 1722 ) $$ dereference of possibly-null reference parseRoot
		for (int i = 0; i < parseRoot.children.size(); i++) {
		                    ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:22: error: (dereference.of.nullable) $$ 1 $$ node $$ ( 576, 580 ) $$ dereference of possibly-null reference node
		if (node.attribute.equals("DECLARE"))
		    ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:156: error: (argument) $$ 4 $$ tokenSource $$ CommonTokenStream constructor $$ @Initialized @MonotonicNonNull EsperLexer $$ @Initialized @NonNull TokenSource $$ ( 4074, 4079 ) $$ incompatible argument for parameter tokenSource of CommonTokenStream constructor.
		parseProcess(new CommonTokenStream(lexer));
		                                   ^
  found   : @Initialized @MonotonicNonNull EsperLexer
  required: @Initialized @NonNull TokenSource
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:174: error: (argument) $$ 4 $$ obj $$ Field.getInt $$ null (NullType) $$ @Initialized @NonNull Object $$ ( 4602, 4606 ) $$ incompatible argument for parameter obj of Field.getInt.
					if (field.getInt(null) == tokenType) {
					                 ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
5 errors
